# rust_ecommerce_backend

./: Cargo.toml
src/: main.rs
src/api/: product_api.rs  roles_api.rs  users_api.rs
src/middleware/: admin_middleware.rs  auth_middleware.rs
src/models/: product_model.rs  roles.rs  user.rs
