[package]
name = "rust-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.5.0"
actix-web = "^4.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.18"
env_logger = "0.10.0"
argon2 = "0.5.0"
dotenv = "0.15.0"

[dev-dependencies]
cargo-watch = "8.4.0"
